--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/icon
 spring.datasource.username=root
 spring.datasource.password=Wgiardino22@
 # Hibernate
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 # SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
